tests/ui/typeck/function_calls/type_conversion_bool_to_uint.sol
//@ compile-flags: -Ztypeck

contract C {
    function f(bool b) public pure {
        uint(b); //~ ERROR: invalid explicit type conversion
    }
}
